--- a/Fund_API/Grp_Fund_API/appsettings.json
+++ b/Fund_API/Grp_Fund_API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FundDB": "Server=BSOFT-28-D-1A;Database=optionccom_chms;User Id=sa;Password=sa;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  }
+
 }
