--- a/Fund_API/Grp_Fund_API/Grp_Fund_API.csproj
+++ b/Fund_API/Grp_Fund_API/Grp_Fund_API.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Grp_Fund_Framework\Grp_Fund_Framework.csproj" />
+    <ProjectReference Include="..\Grp_Fund_Model\Grp_Fund_Model.csproj" />
+    <ProjectReference Include="..\Grp_Fund_Service\Grp_Fund_Service.csproj" />
   </ItemGroup>
 
 </Project>
