--- a/Fund_API/Grp_Fund_Repository/Grp_Fund_Repository.csproj
+++ b/Fund_API/Grp_Fund_Repository/Grp_Fund_Repository.csproj
@@ -11,4 +11,12 @@
     <Folder Include="Repository\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Grp_Fund_DBEngine\Grp_Fund_DBEngine.csproj" />
+  </ItemGroup>
+
 </Project>
