--- a/Fund_API/Grp_Fund_Service/Grp_Fund_Service.csproj
+++ b/Fund_API/Grp_Fund_Service/Grp_Fund_Service.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Service\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Grp_Fund_Repository\Grp_Fund_Repository.csproj" />
+  </ItemGroup>
+
 </Project>
